@@ -2,6 +2,9 @@
 ?? ??? 2007 - 2.5.0-dev3
 ------------------------
 
+ * Fixed expansion of macros when using relative changes with setvar.  In
+   addition, added support for expanding macros in the variable name.
+
  * Situations where ModSecurity will intercept, generate an error or log
    a level 1-3 message to the debug log are now marked as 'relevant' and may
    generate an audit log entry.
